# maillog

./: .env.docker  .env.example  Dockerfile  Makefile  README.md  cli.py  docker-compose.yml  index.html  pyproject.toml  settings.py
data/: mail.log.example
internals/: __init__.py
internals/providers/: __init__.py  parser.py  query.py
internals/scripts/: __init__.py  app.py  parsing.py
ports/: __init__.py
ports/api/v1/: __init__.py  bootstrap.py  instance.py
ports/api/v1/contracts/: __init__.py  application.py
ports/api/v1/contracts/schema/: generic.py  logs.py
ports/api/v1/endpoints/: __init__.py  logs.py
ports/api/v1/middlewares/: __init__.py  exception_handlers.py
ports/api/v1/routes/: __init__.py  bootstrap.py  generic.py  logs.py
ports/rdbs/: __init__.py  migrator.py
ports/rdbs/migrations/downgrade/: 01_init.sql
ports/rdbs/migrations/upgrade/: 01_init.sql
specs/: __init__.py
specs/configs/storage/: __init__.py  rdbs.py
specs/providers/: __init__.py  query.py
